Fix PostComponent scroll div cutting off content when view is small

--- a/vanhouse/src/components/post.css
+++ b/vanhouse/src/components/post.css
@@ -4,6 +4,9 @@
 https://www.w3schools.com/css/tryit.asp?filename=trycss_buttons_shadow */
 
 .post_collection_div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   width: 100%;
   height: 86vh;
   box-shadow: 0 8px 20px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.1);
@@ -12,32 +15,38 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_buttons_shadow */
 }
 
 #post_collection_tools_div {
+  flex-grow: 8;
   display: flex;
   direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: auto;
-  margin: auto;
+  padding: 10px;
+  margin: 0;
   background-color: rgba(15, 15, 26, 0.1);
-  padding: 10px 1px;
 }
 
-#createPostBtn {
-  float: right;
-  flex-basis: 5%;
-  height: 2.5rem;
+#searchDiv {
+  flex-basis: 85%;
+}
+
+#createPostDiv {
+  flex-basis: 15%;
+  display: flex;
+  justify-content: flex-end;
   margin-right: 0;
 }
 
 .post_scroll_div {
+  flex-grow: 92;
   display:flex;
+  flex-basis: 100%;
   flex-direction: row;
   align-items: flex-start;
   justify-content: center;
   flex-wrap: wrap;
   min-width: 50%;
-  height: 93%;
+  width: 100%;
   overflow-y:auto;
 }
 
@@ -71,7 +80,8 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_buttons_shadow */
 }
 
 .connection_error_alert {
-  flex-basis: 100%;
+  width: 100%;
+  margin:0;
 }
 
 @keyframes grow {
@@ -142,18 +152,14 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_buttons_shadow */
   justify-content: center;
   align-items: center;
   flex-basis: 100%;
-  text-align: center;
   justify-self: center;
   align-self: flex-end;
-  height: 5rem;
+  padding: 0.75rem;
 }
 
 #getMorePostsBtn {
-  float: bottom;
   flex-basis: 100%;
   text-align: center;
-  justify-self: center;
-  height: 3rem;
 }
 
 .post_div img {
@@ -161,41 +167,8 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_buttons_shadow */
   max-height: 13rem;
   height: auto;
   width: auto;
-  border-radius: 4%;
+  border-radius: 3%;
   border: 1px solid rgba(0,0,0,0.55);
-  /*box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.1);*/
-}
-
-.post_header_div {
-  flex-basis: 100%;
-}
-.post_summary_div {
-  flex-basis: 100%;
-}
-
-/* Create post button styling */
-.create_post_button {
-  font-family: fontAwesome;
-  font-size: 4rem;
-  color: dodgerblue;
-  background-color: rgba(0,0,0,0);
-  border: 0;
-  border-radius: 50%;
-  height: 4rem;
-  width: 4rem;
-  line-height: 4rem;
-  float: right;
-}
-
-.create_post_button_div {
-  float: right;
-  flex-basis: 100%;
-  padding: 10px;
-}
-
-.create_post_button:hover {
-  color: rgb(1, 98, 204);
-  transition: color 0.2s ease;
 }
 
 #fetchSpinnerDiv {
@@ -217,12 +190,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_buttons_shadow */
   .post_scroll_div {
     border-radius: 0;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.0), 0 6px 20px 0 rgba(0,0,0,0.0);
-  }
-  
-  .create_post_button_div {
-    justify-self: flex-end;
-    flex-basis: 100%;
-    padding: 10px;
   }
 }
 
